--- a/animeyt-tv.css
+++ b/animeyt-tv.css
@@ -33,25 +33,33 @@ height: 20%
   width: auto;
 
 }
+
 .box{
   display:inline-block;
-  
-  top: 14%;
+  top: 30%;
   width: 150px;
-  height:100px;
   margin:1em;
+  width: 150px;
+
 }
 
 
+.comentarios{
+  clear: left;
+  border: 3px solid black;
 
-
-#comentarios{
-  border: 1px solid black;
 }
+
 #series-recientes{
-  border: 2px solid purple;
+  border: 1px solid purple;
 }
 #footer{
   border: 1px solid green;
   width: auto;
+}
+
+.clearfix { clear: both; }
+
+.box img {
+  max-width: 100%;
 }
