--- a/animeyt-tv.css
+++ b/animeyt-tv.css
@@ -7,26 +7,35 @@ width: auto;
 height: 20%;
 margin: auto;
 }
+
 #content-logo {
   border: 1px solid gray;
   width: 80px auto;
   height: 40px;
   float: left;
 }
-#content-logo img{ max-width: 100%; }
-.logo{
-  height: 40px;
-  width: 80px;
-  float: right;
-  margin: 0em;
+#content-logo img{
+height: 40px;
+width: 80px;
+float: right;
+margin: 0em;
 }
 #content-menu{
   border: 1px solid black;
   float: right;
   height: 40px;
   width: auto;
+}
+a:hover {
+  background: #3ead47;
+  padding: 10px;
+}
+
+#content-menu nav{
+  padding: 10px;
 
 }
+
 #buscador{
   border: 0.5px solid black;
   float: right;
