--- a/animeyt-tv.css
+++ b/animeyt-tv.css
@@ -48,41 +48,76 @@ margin: auto;
   border: 2px solid red;
 }
 
-
-
-
+/*borde del contenido */
 #content {
   border: 1px solid red;
   width: auto;
-
 }
+/*acaba el contenido */
 
+/* titulo de contenido */
+#content h1
+{ text-align: center;}
+/*acaba el contenido */
+
+/* anchura de bloques */
 .box{
   display:inline-block;
   top: 30%;
   width: 150px;
   margin:1em;
-  width: 150px;
-
 }
+/* bloques*/
 
-
-.comentarios{
-  clear: left;
-  border: 3px solid black;
-
-}
-
+/*borde  series-recientes*/
 #series-recientes{
   border: 1px solid purple;
 }
+/*acaba series-recientes*/
+
+/*fondo color y texto footer */
 #footer{
-  border: 1px solid green;
-  width: auto;
+
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color:white ;
+    color: black;
+    text-align: center;
 }
+/*acaba footer*/
 
 .clearfix { clear: both; }
 
+/* imagnes */
 .box img {
   max-width: 100%;
+}
+
+
+
+
+/* Fa icons */
+
+.fa {
+   padding: 20px;
+   width: 50px;
+   text-decoration: none;
+
+}
+
+
+
+/* Set a specific color for each brand */
+
+/* color Facebook */
+.fa-facebook {
+   background: #3B5998;
+   color: white;
+}
+
+/* color Twitter */
+.fa-twitter {
+   background: #55ACEE;
+   color: white;
 }
